apps/demo/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
  labels: {istio-injection: disabled}  # ou autre, facultatif
