apps/demo/k8s/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata: {name: demo}
spec:
  replicas: 3
  selector: {matchLabels: {app: demo}}
  template:
    metadata: {labels: {app: demo}}
    spec:
      containers:
        - name: demo
          image: ghcr.io/clemuscle/demo:latest   # remplacé par CI
          ports: [{containerPort: 8000}]
  strategy:
    canary:
      steps:
        - setWeight: 10
        - pause: {duration: 1m}
        - setWeight: 50
        - pause: {duration: 2m}
        - setWeight: 100
