apps/demo/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: demo
spec:
  selector:
    app: demo               # même label que le Rollout/Deployment
  ports:
    - port: 80              # port « virtuel » exposé par le Service
      targetPort: 8000      # port du conteneur FastAPI
      protocol: TCP
